// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus003Packet {
extensions 8 to 108;

  optional ccsds_mal.protobuf.UINTEGER sid = 1;
  optional ccsds_mal.protobuf.UINTEGER validityParameterId = 2;
  optional ccsds_mal.protobuf.STRING validityParameterMask = 3;
  optional ccsds_mal.protobuf.ATTRIBUTE validityParameterExpectedValue = 4;
  optional ccsds_mal.protobuf.DURATION collectionInterval = 5;
  optional ccsds_mal.protobuf.UINTEGER status = 6;
  optional pusGroundModel.protobuf.PusElement pusElement = 7;
}
